# google-api-lib

./: mypy.ini  pyproject.toml  requirements.txt
src/google_api_lib_gd/: api.py  docs.py  places.py  sheets.py  slides.py  staticmaps.py
src/google_api_lib_gd/utilities/: decorators.py  validators.py
src/googleapilib/: drive.py  errors.py  slides.py
src/googleapilib/docs/: __init__.py  schema.py
src/googleapilib/drive/: __init__.py  schema.py
src/googleapilib/sheets/: __init__.py  schema.py
src/googleapilib/slides/: __init__.py  schema.py
src/googleapilib/utilities/: decorators.py
src/tests/: test_docs_schema.py  test_drive_requests.py  test_sheets_requests.py  test_sheets_schema.py  test_slides.py  test_slides_requests.py  test_slides_schema.py  test_validators.py
